--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
-  <body>
-    <header>
-      <h1> Passport App </h1>
 
-      <ul>
-        <li> <a href="/"> Home </a> </li>
-        <li> <a href="/signup"> Sign Up </a> </li>
-      </ul>
+<head>
+    <meta charset="utf-8">
+    <title>
+        <%= title %>
+    </title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
+    <header>
+        <h1> Passport App </h1>
+
+        <ul>
+            <li> <a href="/"> Home </a> </li>
+            <%  if(typeof user !== 'undefined'){%>
+                <li> <a href="/logout">Log Out </a> </li>
+                <li> <a href="/profile/edit">Edit</a> </li>
+
+                <%  }else{%>
+                    <li> <a href="/signup"> Sign Up </a> </li>
+                    <li> <a href="/login">Log In </a> </li>
+                    <%};%>
+        </ul>
     </header>
 
     <%- body %>
 
-    <footer>
-      <p> Made with &hearts; at Ironhack. </p>
-    </footer>
-  </body>
+        <footer>
+            <p> Made with &hearts; at Ironhack. </p>
+        </footer>
+</body>
+
 </html>
