--- a/views/auth/login-view.ejs
+++ b/views/auth/login-view.ejs
@@ -1,18 +1,29 @@
-<h2>Log In</h2>
+<h2> Log In </h2>
 
-<%if( errorMessage.length > 0){%>
-<div class = "error"><%= errorMessage%></div>
-<%};%>
+<% if (errorMessage.length > 0) { %>
+  <div class="error"> <%= errorMessage %> </div>
+<% } %>
 
-<form class="" action="/login" method="post">
-<label for="username-input">Username: </label>
-              <!-- usernameField:'loginUsername',-->
-                                      <!--| -->
-<input id="username-input" name="loginUsername" value="" type="text">
-<br>
-<label for="password-input">Password: </label>
-<input id="password-input" name="loginPassword" value="" type="password">
-<button>Log In</button>
+<form method="post" action="/login">
+  <label for="username-input"> Account Name </label>
+  <input  id="username-input" type="text" name="loginUsername">
+  <br>  <!--                                          |        -->
+        <!--                    usernameField: 'loginUsername' -->
+
+  <label for="password-input"> Password </label>
+  <input  id="password-input" type="password" name="loginPassword">
+  <br>  <!--                                              |        -->
+        <!--                        passwordField: 'loginPassword' -->
+
+  <button> Log In </button>
 </form>
-<p>Dont have an account?
-<a href="/signup">Sign Up</a></p>
+
+
+
+<a href="/auth/facebook">Log in with facebook</a>
+<a href="/auth/google">Log in with google</a>
+
+<p>
+  Don't have an account?
+  <a href="/signup"> Sign Up </a>
+</p>
