--- a/views/auth/signup-view.ejs
+++ b/views/auth/signup-view.ejs
@@ -1,18 +1,27 @@
-<h2>sign up</h2>
-<%if(typeof errorMessage !== "undefined"){%>
-  <div class ="error"><%=errorMessage%></div>
-<%};%>
-<form class="" action="/signup" method="post">
-<label for="name-input">Your Name: </label>
-<input id="name-input" name="signupName" value="" type="text">
-<br>
-<label for="username-input">Account Name: </label>
-<input id="username-input" name="signupUsername" value="" type="text">
-<br>
-<label for="password-input">Password: </label>
-<input id="password-input" name="signupPassword" value="" type="password">
+<h2> Sign Up </h2>
 
-<button>submit</button>
+<% if (typeof errorMessage !== "undefined") { %>
+  <div class="error"> <%= errorMessage %> </div>
+<% } %>
+
+<form method="post" action="/signup">
+  <label for="name-input"> Your Name </label>
+  <input  id="name-input" type="text" name="signupName">
+  <br>
+
+  <label for="username-input"> Account Name </label>
+  <input  id="username-input" type="text" name="signupUsername">
+  <br>
+
+  <label for="password-input"> Password </label>
+  <input  id="password-input" type="password" name="signupPassword">
+  <br>
+
+  <button> Sign Up </button>
 </form>
-<p>Do you already have an account?
-<a href="/login">Log In</a></p>
+<a href="/auth/facebook">Sign Up with facebook</a>
+<a href="/auth/google">Sign Up with google</a>
+<p>
+  Do you already have an account?
+  <a href="/login"> Log In </a>
+</p>
