--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <h1><%= title %></h1>
-<%if( successMessage.length > 0){%>
-<div class = "success"><%= successMessage%></div>
-<%};%>
-<%if( passportSuccess.length > 0){%>
-<div class = "success"><%= passportSuccess%></div>
-<%};%>
+
+<!-- req.flash() returns an array (wat) -->
+<% if (successMessage.length > 0) { %>
+  <div class="success"> <%= successMessage %> </div>
+<% } %>
+
+<% if (typeof user !== 'undefined') { %>
+  <p> Hello, <%= user.name %>. </p>
+<% } %>
+
 <p>Welcome to <%= title %></p>
-<%if(typeof user !=="undefined"){%>
-  <p>hello,<%=user.name%> </p>
-<%};%>
