--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>
-        <%= title %>
-    </title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <header>
-        <h1> Passport App </h1>
+      <h1> Passport App </h1>
 
+      <nav>
         <ul>
-            <li> <a href="/"> Home </a> </li>
-            <%  if(typeof user !== 'undefined'){%>
-                <li> <a href="/logout">Log Out </a> </li>
-                <li> <a href="/profile/edit">Edit</a> </li>
+          <li> <a href="/"> Home </a> </li>
 
-                <%  }else{%>
-                    <li> <a href="/signup"> Sign Up </a> </li>
-                    <li> <a href="/login">Log In </a> </li>
-                    <%};%>
+          <% if (typeof user !== 'undefined') { %>
+
+            <li> <a href="/profile/edit"> Edit Profile </a> </li>
+            <li> <a href="/logout"> Log Out </a> </li>
+
+          <% } else { %>
+
+            <li> <a href="/signup"> Sign Up </a> </li>
+            <li> <a href="/login"> Log In </a> </li>
+
+          <% } %>
         </ul>
+      </nav>
     </header>
 
     <%- body %>
 
-        <footer>
-            <p> Made with &hearts; at Ironhack. </p>
-        </footer>
-</body>
-
+    <footer>
+      <p> Made with &hearts; at Ironhack. </p>
+    </footer>
+  </body>
 </html>
